--- a/v2fly_config.json
+++ b/v2fly_config.json
@@ -1,22 +1,1 @@
-{
-    "inbounds": [
-        {
-            "port": 443,
-            "protocol": "vmess",
-            "settings": {
-                "clients": [
-                    {
-                        "id": "ffffffff-ffff-ffff-ffff-ffffffffffff",
-                        "alterId": 0
-                    }
-                ]
-            }
-        }
-    ],
-    "outbounds": [
-        {
-            "protocol": "freedom",
-            "settings": {}
-        }
-    ]
-}
+{"inbounds":[{"port":443,"protocol":"vmess","settings":{"clients":[{"id":"ffffffff-ffff-ffff-ffff-ffffffffffff","alterId":0}]}}],"outbounds":[{"protocol":"freedom","settings":{}}]}
